# secure-socket-chat

./: .coverage  .gitignore  LICENSE  README.md  demo.py  pyproject.toml  requirements-dev.txt  run_client.py  run_server.py
.github/workflows/: python-tests.yml
docs/: architecture.md  ci.md  demo.md  feature-pack.md  protocol.md  security-notes.md  testing.md  threat-model.md
secure_chat/: __init__.py  client.py  config.py  crypto_channel.py  e2e.py  file_transfer.py  gui.py  logging_config.py  packet_inspector.py  protocol.py  security.py  server.py  server_key_store.py  trust_store.py  utils.py
tests/: conftest.py  test_crypto_channel.py  test_demo.py  test_e2e.py  test_file_transfer.py  test_gui_dashboard.py  test_integration_chat.py  test_integration_file_transfer.py  test_packet_inspector.py  test_protocol.py  test_protocol_invalid_packets.py  test_security.py  test_sequence_replay.py  test_server_e2e.py  test_trust_store.py  test_utils.py
