[project]
name = "secure-socket-chat"
version = "1.0.0"
description = "Encrypted socket chat application with public-key exchange, custom packet framing, and Tkinter GUI."
requires-python = ">=3.10"
dependencies = [
    "PyNaCl>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
