[project]
name = "secure-socket-chat"
version = "1.0.0"
description = "Encrypted socket chat application with public-key exchange, custom packet framing, and Tkinter GUI."
requires-python = ">=3.10"
dependencies = [
    "PyNaCl>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "bandit>=1.7.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".git",
    ".venv",
    "venv",
    "env",
    "build",
    "dist",
]

[tool.bandit]
exclude_dirs = ["tests"]
